--- a/html-source/reservation.html
+++ b/html-source/reservation.html
@@ -2,128 +2,175 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-  <title>my nice page</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-    integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <title>my nice page</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+          integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
-  <style>
-    .my-footer {
-      height: 5em;
-      padding: 1em;
-      margin-top: 1.5em;
-      background-color: #3d3d3d;
-      color: #ffffff;
-      font-size: 80%;
-    }
+    <style>
+        .my-footer {
+            height: 5em;
+            padding: 1em;
+            margin-top: 1.5em;
+            background-color: #3d3d3d;
+            color: #ffffff;
+            font-size: 80%;
+        }
 
-    .room-image {
-      width: 50%;
-    }
-  </style>
+        .room-image {
+            width: 50%;
+        }
+        .red-text {
+            color: red;
+        }
+    </style>
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="#">Navbar</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="about.html">About</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-            aria-haspopup="true" aria-expanded="false">
-            Rooms
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="generals.html">General's Quarters</a>
-            <a class="dropdown-item" href="majors.html">Major's Suite</a>
-          </div>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="reservation.html" tabindex="-1" aria-disabled="true">Book Now</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="contact.html" tabindex="-1" aria-disabled="true">Contact</a>
-        </li>
-      </ul>
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+                <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="about.html">About</a>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                   aria-haspopup="true" aria-expanded="false">
+                    Rooms
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="generals.html">General's Quarters</a>
+                    <a class="dropdown-item" href="majors.html">Major's Suite</a>
+                </div>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="reservation.html" tabindex="-1" aria-disabled="true">Book Now</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="contact.html" tabindex="-1" aria-disabled="true">Contact</a>
+            </li>
+        </ul>
     </div>
-  </nav>
+</nav>
 
-  <div class="container">
+<div class="container">
 
     <div class="row">
-      <div class="col-md-3"></div>
-      <div class="col-md-6">
-        <h1 class="mt-5">Search for Availability</h1>
+        <div class="col-md-3"></div>
+        <div class="col-md-6">
+            <h1 class="mt-5">Search for Availability</h1>
 
-        <form action="" method="GET">
-          <div class="form-row">
-            <!--start_date-->
-            <div class="col">
-              <div class="form-group">
-                <label for="start_date">Starting Date</label>
-                <input required type="date" class="form-control" id="start_date" name="start_date"
-                  aria-describedby="startDateHelp">
-                <small id="startDateHelp" class="form-text text-muted">Enter your starting date in the form of
-                  YYYY-MM-DD.</small>
-              </div>
-            </div>
+            <form action="reservation.html" method="GET" novalidate class="needs-validation">
+                <div class="form-row">
+                    <!--start_date-->
+                    <div class="col">
+                        <div class="form-group">
+                            <label for="start_date">Starting Date</label>
+                            <input required type="date" class="form-control" id="start_date" name="start_date"
+                                   aria-describedby="startDateHelp">
+                            <small id="startDateHelp" class="form-text text-muted">Enter your starting date in the form
+                                of
+                                YYYY-MM-DD.</small>
+                        </div>
+                    </div>
 
-             <!--end_date-->
-            <div class="col">
-              <div class="form-group">
-                <label for="end_date">Ending Date</label>
-                <input required type="date" class="form-control" id="end_date" name="end_date" aria-describedby="endDateHelp">
-                <small id="endDateHelp" class="form-text text-muted">Enter your ending date in the form of
-                  YYYY-MM-DD.</small>
-              </div>
-            </div>
-          </div>
-          <button type="submit" class="btn btn-primary">Search Availability</button>
-        </form>
-      </div>
+                    <!--end_date-->
+                    <div class="col">
+                        <div class="form-group">
+                            <label for="end_date">Ending Date</label>
+                            <input required type="date" class="form-control" id="end_date" name="end_date"
+                                   aria-describedby="endDateHelp">
+                            <small id="endDateHelp" class="form-text text-muted">Enter your ending date in the form of
+                                YYYY-MM-DD.</small>
+                        </div>
+                    </div>
+                </div>
+                <button type="submit" class="btn btn-primary">Search Availability</button>
+            </form>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col">
+            <p id="myParagraph">This is some text</p>
+            <p>
+                <button id="colorButton" class="btn btn-outline-secondary">Click me</button>
+            </p>
+        </div>
     </div>
 
 
-  </div>
-  <div class="row my-footer">
+</div>
+<div class="row my-footer">
     <div class="col">
-      Left
+        Left
     </div>
 
     <div class="col">
-      Middle
+        Middle
     </div>
 
     <div class="col">
-      Right
+        Right
     </div>
 
-  </div>
+</div>
 
 
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"
+        integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"
+        crossorigin="anonymous"></script>
+<script>
+    // Example starter JavaScript for disabling form submissions if there are invalid fields
+    (function() {
+        'use strict';
+        window.addEventListener('load', function() {
+            // Fetch all the forms we want to apply custom Bootstrap validation styles to
+            let forms = document.getElementsByClassName('needs-validation');
+            // Loop over them and prevent submission
+            Array.prototype.filter.call(forms, function(form) {
+                form.addEventListener('submit', function(event) {
+                    if (form.checkValidity() === false) {
+                        event.preventDefault();
+                        event.stopPropagation();
+                    }
+                    form.classList.add('was-validated');
+                }, false);
+            });
+        }, false);
+    })();
 
+</script>
+<script>
+    console.log("I am printing from javascript");
+    //let myElement =  document.getElementById("myParagraph");
+    //myElement.classList.add("red-text");
+    document.getElementById("colorButton").addEventListener("click", function(){
+        let myElement = document.getElementById("myParagraph")
+        if (myElement.classList.contains("red-text")) {
+            myElement.classList.remove("red-text");
+        } else {
+            myElement.classList.add("red-text");
+        }
+    } )
 
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"
-    integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"
-    crossorigin="anonymous"></script>
+</script>
 </body>
 
 </html>
