--- a/html-source/reservation.html
+++ b/html-source/reservation.html
@@ -7,6 +7,9 @@
     <title>my nice page</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
           integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <!-- date picker -->
+    <link rel="stylesheet"
+          href="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.1.2/dist/css/datepicker-bs4.min.css">
 
     <style>
         .my-footer {
@@ -21,6 +24,7 @@
         .room-image {
             width: 50%;
         }
+
         .red-text {
             color: red;
         }
@@ -71,8 +75,8 @@
             <h1 class="mt-5">Search for Availability</h1>
 
             <form action="reservation.html" method="GET" novalidate class="needs-validation">
-                <div class="form-row">
-                    <!--start_date-->
+                <!--div class="form-row">
+
                     <div class="col">
                         <div class="form-group">
                             <label for="start_date">Starting Date</label>
@@ -84,7 +88,7 @@
                         </div>
                     </div>
 
-                    <!--end_date-->
+
                     <div class="col">
                         <div class="form-group">
                             <label for="end_date">Ending Date</label>
@@ -94,8 +98,24 @@
                                 YYYY-MM-DD.</small>
                         </div>
                     </div>
+                </div-->
+
+
+                <div class="" row>
+                    <div class="col">
+                        <div class="form-row" id="reservation-dates">
+                            <div class="col">
+                                <input required type="text" name="start" class="form-control" placeholder="arrival">
+                                <!--span>to</span-->
+                            </div>
+                            <div class="col">
+                                <input required type="text" name="end" class="form-control" placeholder="depature">
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <button type="submit" class="btn btn-primary">Search Availability</button>
+
+                <button type="submit" class="btn btn-primary mt-5">Search Availability</button>
             </form>
         </div>
     </div>
@@ -136,16 +156,19 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"
         integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"
         crossorigin="anonymous"></script>
+<!--date picker -->
+<script src="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.1.2/dist/js/datepicker-full.min.js"></script>
+
 <script>
     // Example starter JavaScript for disabling form submissions if there are invalid fields
-    (function() {
+    (function () {
         'use strict';
-        window.addEventListener('load', function() {
+        window.addEventListener('load', function () {
             // Fetch all the forms we want to apply custom Bootstrap validation styles to
             let forms = document.getElementsByClassName('needs-validation');
             // Loop over them and prevent submission
-            Array.prototype.filter.call(forms, function(form) {
-                form.addEventListener('submit', function(event) {
+            Array.prototype.filter.call(forms, function (form) {
+                form.addEventListener('submit', function (event) {
                     if (form.checkValidity() === false) {
                         event.preventDefault();
                         event.stopPropagation();
@@ -161,14 +184,20 @@
     console.log("I am printing from javascript");
     //let myElement =  document.getElementById("myParagraph");
     //myElement.classList.add("red-text");
-    document.getElementById("colorButton").addEventListener("click", function(){
+    document.getElementById("colorButton").addEventListener("click", function () {
         let myElement = document.getElementById("myParagraph")
         if (myElement.classList.contains("red-text")) {
             myElement.classList.remove("red-text");
         } else {
             myElement.classList.add("red-text");
         }
-    } )
+    })
+
+    const elem = document.getElementById('reservation-dates');
+    const rangepicker = new DateRangePicker(elem, {
+        format: "yyyy-mm-dd"
+        // ...options
+    });
 
 </script>
 </body>
